--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "coincodex-api",
-  "version": "1.0.0",
+  "name": "coincodex-api-v2",
+  "version": "2.0.0",
   "description": "A Node.js wrapper for the CoinCodex API with no dependencies.",
   "main": "index.js",
   "homepage": "https://github.com/miscavage/CoinCodex-API#readme",
-  "author": "Mark Miscavage",
+  "author": "Sander Sierdsma",
   "license": "MIT",
   "scripts": {
     "test": "mocha --no-timeouts --reporter spec \"./tests/lib/*.js\" \"./tests/lib/**/*.js\""
@@ -25,11 +25,11 @@
     "no-dependencies",
     "nodejs",
     "npm",
-    "javascript",
+    "typescript",
     "api-client"
   ],
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
